retrive salary details page

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://console.claimz.in/admin-api/api/auth
-# REACT_APP_API_URL=http://consoledev.claimz.in/admin-api/api/auth
+# REACT_APP_API_URL=https://console.claimz.in/admin-api/api/auth
+REACT_APP_API_URL=http://consoledev.claimz.in/admin-api/api/auth
