--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "recharts": "^2.5.0",
+    "redux": "^5.0.1",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
